--- a/src/pages/Der-abiturientenpreis.css
+++ b/src/pages/Der-abiturientenpreis.css
@@ -8,6 +8,7 @@
   padding-left: 1.5rem;
   text-transform: uppercase;
   text-align: center;
+  margin-top: 40px;
 }
 
 .derabiturientenpreis ion-card-subtitle {
