--- a/src/pages/Dietreffen.css
+++ b/src/pages/Dietreffen.css
@@ -8,6 +8,7 @@
   padding-left: 1.5rem;
   text-transform: uppercase;
   text-align: center;
+  margin-top: 40px;
 }
 
 .die-treffen ion-accordion-group {
